# CLAIMS_Official

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md
CLAIMS_release/: PHC  README.md  motion-convert  motion-generate  prompt-generate
CLAIMS_release/docs/: data_assets.md  environments.md  pipeline.md
CLAIMS_release/runs/: README.md  experiment_notes.md
CLAIMS_release/scripts/: README.md  convert_motions_to_hik.py  filter_phc_training_set.py  generate_initial_prompts.py  generate_next_loop_prompts.py
CLAIMS_release/vlm-feedback/: README.md  Smpl_Visualization.py  config_difficulty.yaml  merge_feedback_with_metrics.py  motion_analyzer.py  run_vlm_feedback.py  video_processor.py  video_processor_alignment.py  video_prompt_alignment.py
PHC/: 1300size.md  925.md  metrics_loop0.csv
PHC/isaacgym/python/examples/urdf/VMP_DESCRIPTION/VMP_DESCRIPTION/: CMakeLists.txt  VMP_DESCRIPTION_nohead_nocollision.urdf  VMP_DESCRIPTION_nohead_nocollision.xml  package.xml
PHC/isaacgym/python/examples/urdf/VMP_DESCRIPTION/VMP_DESCRIPTION/launch/: display.launch  gazebo.launch
PHC/isaacgym/python/examples/urdf/VMP_DESCRIPTION/VMP_DESCRIPTION/meshes/: head_pitch_Link.STL  left_ankle_link.STL  left_shoulder_pitch_link.STL  right_hip_pitch_link.STL  right_hip_roll_link.STL  right_knee_link.STL  right_shoulder_pitch_link.STL  right_shoulder_yaw_link.STL
PHC/phc/: run_hydra.py
motion-convert/: convert_data_mdm_hik.py
motion-generate/: README.md  language_to_pose_server_generate_example.py  mdm_talker.py
prompt-generate/: prompt_loop0.py  prompt_next.py
(+50 files in other folders)
